# aiteen

./: .gitignore  README.md  fix_1.py  i18n_checker.py  i18n_patch_locales.py  i18n_translator.py  path.py  pyproject.toml
.github/workflows/: pull-translations.yml  push-english-keys.yml  test.yml  translate.yml
aiteen/: __init__.py  audit.py  cli.py  config.py  patch.py  qa.py  translate.py
docs/features/: replace-aiteen-with-robust-i18n-pipeline.md
examples/: universe.yaml  wxtm-bridge.yaml
tests/: test_audit.py  test_patch.py  test_pipeline_integration.py  test_qa.py  test_translate.py  test_translation.py
